--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 half = "2.3.1"
 anyhow = "1.0.79"
+bytemuck = "1.14.3"
 leaf_compilation = { path = "../compilation" }
 clap = { version = "4.4.18", features = ["derive"] }
