--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ resolver = "2"
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.release]
+debug = true
+
 [profile.production]
 inherits = "release"
 panic = "abort"
