--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 half = "2.3.1"
 anyhow = "1.0.79"
 bytemuck = "1.14.3"
+nohash-hasher = "0.2.0"
 leaf_compilation = { path = "../compilation" }
 clap = { version = "4.4.18", features = ["derive"] }
