--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ resolver = "2"
 [profile.dev.package."*"]
 opt-level = 3
 
-[profile.release]
+[profile.release_with_debug_symbols]
+inherits = "release"
 debug = true
 
 [profile.production]
