--- a/reflection_new/Cargo.toml
+++ b/reflection_new/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 bumpalo = "3.15.4"
 derivative = "2.2.0"
+leaf_derive = { path = "../derive", optional = true }
 bytemuck = { version = "1.15.0", optional = true }
 
 [features]
 build = []
-read = ["dep:bytemuck"]
-write = ["dep:bytemuck"]
+read = ["dep:bytemuck", "dep:leaf_derive"]
+write = ["dep:bytemuck", "dep:leaf_derive"]
