--- a/reflection_new/Cargo.toml
+++ b/reflection_new/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bumpalo = "3.15.4"
 derivative = "2.2.0"
+bitflags = "2.5.0"
 leaf_derive = { path = "../derive", optional = true }
 bytemuck = { version = "1.15.0", optional = true }
 
