--- a/compilation/Cargo.toml
+++ b/compilation/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 half = "2.3.1"
 anyhow = "1.0"
 leaf_parsing = { path = "../parsing" }
-leaf_reflection = { path = "../reflection" }
+leaf_reflection = { path = "../reflection", features = ["build", "read", "write"] }
