--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 half = "2.3.1"
 anyhow = "1.0.79"
 bytemuck = "1.14.3"
+paste = "1.0.14"
 nohash-hasher = "0.2.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 leaf_compilation = { path = "../compilation" }
 clap = { version = "4.4.18", features = ["derive"] }
