--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 half = "2.3.1"
 anyhow = "1.0.79"
 bytemuck = "1.14.3"
+tracing-flame = "0.2.0"
 paste = "1.0.14"
 nohash-hasher = "0.2.0"
 tracing = "0.1.40"
