--- a/reflection/Cargo.toml
+++ b/reflection/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 bumpalo = "3.15.4"
 derivative = "2.2.0"
 bitflags = "2.5.0"
-leaf_derive = { path = "../derive", optional = true }
+leaf_derive = { path = "../derive" }
 bytemuck = { version = "1.15.0", optional = true }
 
 [features]
 build = []
-read = ["dep:bytemuck", "dep:leaf_derive"]
-write = ["dep:bytemuck", "dep:leaf_derive"]
+read = ["dep:bytemuck"]
+write = ["dep:bytemuck"]
