--- a/reflection/Cargo.toml
+++ b/reflection/Cargo.toml
@@ -9,8 +9,11 @@ edition = "2021"
 bumpalo = "3.15.4"
 derivative = "2.2.0"
 bitflags = "2.5.0"
+fxhash = "0.2.1"
+nohash-hasher = "0.2.0"
 leaf_derive = { path = "../derive" }
 bytemuck = { version = "1.15.0", optional = true }
+tracing = "0.1.40"
 
 [features]
 build = []
