--- a/compilation/Cargo.toml
+++ b/compilation/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 half = "2.3.1"
 anyhow = "1.0"
 tracing = "0.1.40"
+ariadne = "0.4.0"
 fxhash = "0.2.1"
 leaf_parsing = { path = "../parsing" }
 leaf_reflection = { path = "../reflection", features = ["build", "read", "write"] }
