--- a/parsing/Cargo.toml
+++ b/parsing/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+logos = "0.14.0"
+winnow = { version = "0.6.6" }
+ariadne = "0.4.0"
 unescape = "0.1.0"
-lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
-
-[build-dependencies]
-lalrpop = "0.20.0"
+derive_more = { version = "1.0.0-beta.6", features = ["display"] }
