--- a/parsing/Cargo.toml
+++ b/parsing/Cargo.toml
@@ -11,3 +11,8 @@ winnow = { version = "0.6.6" }
 ariadne = "0.4.0"
 unescape = "0.1.0"
 derive_more = { version = "1.0.0-beta.6", features = ["display"] }
+
+[features]
+debug_parser = [
+    "winnow/debug"
+]
