--- a/compilation/Cargo.toml
+++ b/compilation/Cargo.toml
@@ -11,4 +11,5 @@ tracing = "0.1.40"
 ariadne = "0.4.0"
 fxhash = "0.2.1"
 leaf_parsing = { path = "../parsing" }
+leaf_derive = { path = "../derive", features = ["operators"] }
 leaf_reflection = { path = "../reflection", features = ["build", "read", "write"] }
