--- a/reflection/Cargo.toml
+++ b/reflection/Cargo.toml
@@ -11,7 +11,7 @@ derivative = "2.2.0"
 bitflags = "2.5.0"
 fxhash = "0.2.1"
 nohash-hasher = "0.2.0"
-leaf_derive = { path = "../derive" }
+leaf_derive = { path = "../derive", features = ["metadata"] }
 bytemuck = { version = "1.15.0", optional = true }
 tracing = "0.1.40"
 
