--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,8 +11,8 @@ anyhow = "1.0.79"
 bytemuck = "1.14.3"
 paste = "1.0.14"
 nohash-hasher = "0.2.0"
-leaf_compilation = { path = "../compilation" }
 clap = { version = "4.4.18", features = ["derive"] }
+leaf_compilation = { path = "../compilation", features = ["backend-x86_64"] }
 
 tracing = "0.1.40"
 tracing-flame = "0.2.0"
