--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,7 +12,7 @@ bytemuck = "1.14.3"
 paste = "1.0.14"
 nohash-hasher = "0.2.0"
 clap = { version = "4.4.18", features = ["derive"] }
-leaf_compilation = { path = "../compilation", features = ["backend-x86_64"] }
+leaf_compilation = { path = "../compilation", features = ["llvm-force-dynamic"] }
 
 tracing = "0.1.40"
 tracing-flame = "0.2.0"
