--- a/compilation/Cargo.toml
+++ b/compilation/Cargo.toml
@@ -13,6 +13,7 @@ ariadne = "0.4"
 fxhash = "0.2"
 nohash-hasher = "0.2"
 rayon = "1.10"
+pathdiff = "0.2.1"
 serde = { version = "1.0", features = ["derive"] }
 
 leaf_parsing = { path = "../parsing" }
