--- a/reflection_v2/Cargo.toml
+++ b/reflection_v2/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 fxhash = "0.2"
 bumpalo = "3.15"
+indexmap = "2.2"
 petgraph = "0.6"
-num-traits = "0.2"
 owning_ref = "0.4"
-parking_lot = "0.12"
+tracing = "0.1.40"
+parking_lot = { version = "0.12", features = ["owning_ref"] }
 
 [features]
 #build = []
